# qt_nn

./: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
mvc/model/: mlp.cpp  mlp.h
mvc/view/: gui.cpp
